2010-06-08  Kai Tietz  <kai.tietz@onevision.com>

	* lib32/shell32.def (ILCreateFromPath, ILCreateFromPathA,
	ILCreateFromPathW, SHSimpleIDListFromPath): Added.

2010-06-05  Jonathan Yong  <jon_y@sourceforge.net>

	* lib32/clfsw32.def: New.
	* lib32/clfsw32.def: Likewise.
	* lib64/kernel32.def (AddSIDToBoundaryDescriptor): New.
	(AddSecureMemoryCacheCallback): Likewise.
	(AllocateUserPhysicalPagesNuma): Likewise.
	(ApplicationRecoveryFinished): Likewise.
	(ApplicationRecoveryInProgress): Likewise.
	(ClosePrivateNamespace): Likewise.
	(CreateBoundaryDescriptorA): Likewise.
	(CreateBoundaryDescriptorW): Likewise.
	(CreatePrivateNamespaceA): Likewise.
	(CreatePrivateNamespaceW): Likewise.
	(DeleteBoundaryDescriptor): Likewise.
	(OpenPrivateNamespaceA): Likewise.
	(OpenPrivateNamespaceW): Likewise.
	(RegisterApplicationRecoveryCallback): Likewise.
	(RemoveSecureMemoryCacheCallback): Likewise.
	* lib64/ws2_32.def (FreeAddrInfoExA): New.
	(FreeAddrInfoExW): Likewise.
	(GetAddrInfoExA): Likewise.
	(GetAddrInfoExW): Likewise.
	* lib64/advapi32.def (AddMandatoryAce): New.
	* lib64/winspool.def (AddPrinterConnection2A): New.
	(AddPrinterConnection2W): New.
	* lib32/kernel32.def (InterlockedPushListSList): Remove forwarder.
	(AcquireSRWLockExclusive): Likewise.
	(AcquireSRWLockShared): Likewise.
	(AddVectoredContinueHandler): Likewise.
	(AddVectoredExceptionHandler): Likewise.
	(CallbackMayRunLong): Likewise.
	(CancelThreadpoolIo): Likewise.
	(CloseThreadpool): Likewise.
	(CloseThreadpoolCleanupGroup): Likewise.
	(CloseThreadpoolCleanupGroupMembers): Likewise.
	(CloseThreadpoolIo): Likewise.
	(CloseThreadpoolTimer): Likewise.
	(CloseThreadpoolWait): Likewise.
	(CloseThreadpoolWork): Likewise.
	(DecodePointer): Likewise.
	(DecodeSystemPointer): Likewise.
	(DeleteBoundaryDescriptor): Likewise.
	(DeleteCriticalSection): Likewise.
	(DisassociateCurrentThreadFromCallback): Likewise.
	(EncodePointer): Likewise.
	(EncodeSystemPointer): Likewise.
	(EnterCriticalSection): Likewise.