@@ -1,0 +1,67 @@
+/* msctf-uuid.c */
+/* Generate GUIDs for Text Services interfaces */
+
+#define INITGUID
+#include <basetyps.h>
+DEFINE_GUID(GUID_PROP_ATTRIBUTE,0x34b45670,0x7526,0x11d2,0xa1,0x47,0x00,0x10,0x5a,0x27,0x99,0xb5);
+DEFINE_GUID(IID_ITfThreadMgr,0xaa80e801,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfCompositionView,0xd7540241,0xf9a1,0x4364,0xbe,0xfc,0xdb,0xcd,0x2c,0x43,0x95,0xb7);
+DEFINE_GUID(IID_ITfDocumentMgr,0xaa80e7f4,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfContext,0xaa80e7fd,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfSource,0x4ea48a35,0x60ae,0x446f,0x8f,0xd6,0xe6,0xa8,0xd8,0x24,0x59,0xf7);
+DEFINE_GUID(IID_ITfInputProcessorProfiles,0x1f02b6c5,0x7842,0x4ee6,0x8a,0x0b,0x9a,0x24,0x18,0x3a,0x95,0xca);
+DEFINE_GUID(IID_ITfDisplayAttributeInfo,0x70528852,0x2f26,0x4aea,0x8c,0x96,0x21,0x51,0x50,0x57,0x89,0x32);
+DEFINE_GUID(IID_IEnumTfDisplayAttributeInfo,0x7cef04d7,0xcb75,0x4e80,0xa7,0xab,0x5f,0x5b,0xc7,0xd3,0x32,0xde);
+DEFINE_GUID(IID_ITfDisplayAttributeMgr,0x8ded7393,0x5db1,0x475c,0x9e,0x71,0xa3,0x91,0x11,0xb0,0xff,0x67);
+DEFINE_GUID(IID_ITfCategoryMgr,0xc3acefb5,0xf69d,0x4905,0x93,0x8f,0xfc,0xad,0xcf,0x4b,0xe8,0x30);
+DEFINE_GUID(IID_ITfTextEditSink,0x8127d409,0xccd3,0x4683,0x96,0x7a,0xb4,0x3d,0x5b,0x48,0x2b,0xf7);
+DEFINE_GUID(IID_ITfContextOwnerCompositionSink,0x5f20aa40,0xb57a,0x4f34,0x96,0xab,0x35,0x76,0xf3,0x77,0xcc,0x79);
+DEFINE_GUID(IID_IEnumTfLanguageProfiles,0x3d61bf11,0xac5f,0x42c8,0xa4,0xcb,0x93,0x1b,0xcc,0x28,0xc7,0x44);
+DEFINE_GUID(IID_ITfTextInputProcessor,0xaa80e7f7,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfThreadMgrEventSink,0xaa80e80e,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfKeystrokeMgr,0xaa80e7f0,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfKeyEventSink,0xaa80e7f5,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfMessagePump,0x8f1b8ad8,0x0b6b,0x4874,0x90,0xc5,0xbd,0x76,0x01,0x1e,0x8f,0x7c);
+DEFINE_GUID(IID_ITfClientId,0xd60a7b49,0x1b9f,0x4be2,0xb7,0x02,0x47,0xe9,0xdc,0x05,0xde,0xc3);
+DEFINE_GUID(IID_ITfLanguageProfileNotifySink,0x43c9fe15,0xf494,0x4c17,0x9d,0xe2,0xb8,0xa4,0xac,0x35,0x0a,0xa8);
+DEFINE_GUID(IID_ITfEditSession,0xaa80e803,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfRange,0xaa80e7ff,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfRangeACP,0x057a6296,0x029b,0x4154,0xb7,0x9a,0x0d,0x46,0x1d,0x4e,0xa9,0x4c);
+DEFINE_GUID(IID_ITfInsertAtSelection,0x55ce16ba,0x3014,0x41c1,0x9c,0xeb,0xfa,0xde,0x14,0x46,0xac,0x6c);
+DEFINE_GUID(IID_ITfPropertyStore,0x6834b120,0x88cb,0x11d2,0xbf,0x45,0x00,0x10,0x5a,0x27,0x99,0xb5);
+DEFINE_GUID(IID_IEnumTfRanges,0xf99d3f40,0x8e32,0x11d2,0xbf,0x46,0x00,0x10,0x5a,0x27,0x99,0xb5);
+DEFINE_GUID(IID_IEnumITfCompositionView,0x5efd22ba,0x7838,0x46cb,0x88,0xe2,0xca,0xdb,0x14,0x12,0x4f,0x8f);
+DEFINE_GUID(IID_ITfComposition,0x20168d64,0x5a8f,0x4a5a,0xb7,0xbd,0xcf,0xa2,0x9f,0x4d,0x0f,0xd9);
+DEFINE_GUID(IID_ITfCompositionSink,0xa781718c,0x579a,0x4b15,0xa2,0x80,0x32,0xb8,0x57,0x7a,0xcc,0x5e);
+DEFINE_GUID(IID_ITfContextComposition,0xd40c8aae,0xac92,0x4fc7,0x9a,0x11,0x0e,0xe0,0xe2,0x3a,0xa3,0x9b);
+DEFINE_GUID(IID_ITfContextOwnerCompositionServices,0x86462810,0x593b,0x4916,0x97,0x64,0x19,0xc0,0x8e,0x9c,0xe1,0x10);
+DEFINE_GUID(IID_ITfReadOnlyProperty,0x17d49a3d,0xf8b8,0x4b2f,0xb2,0x54,0x52,0x31,0x9d,0xd6,0x4c,0x53);
+DEFINE_GUID(IID_ITfProperty,0xe2449660,0x9542,0x11d2,0xbf,0x46,0x00,0x10,0x5a,0x27,0x99,0xb5);
+DEFINE_GUID(IID_ITfCompartment,0xbb08f7a9,0x607a,0x4384,0x86,0x23,0x05,0x68,0x92,0xb6,0x43,0x71);
+DEFINE_GUID(IID_ITfCompartmentMgr,0x7dcf57ac,0x18ad,0x438b,0x82,0x4d,0x97,0x9b,0xff,0xb7,0x4b,0x7c);
+DEFINE_GUID(IID_ITfCompartmentEventSink,0x743abd5f,0xf26d,0x48df,0x8c,0xc5,0x23,0x84,0x92,0x41,0x9b,0x64);
+DEFINE_GUID(IID_IEnumTfContexts,0x8f1a7ea6,0x1654,0x4502,0xa8,0x6e,0xb2,0x90,0x23,0x44,0xd5,0x07);
+DEFINE_GUID(IID_IEnumTfDocumentMgrs,0xaa80e808,0x2021,0x11d2,0x93,0xe0,0x00,0x60,0xb0,0x67,0xb8,0x6e);
+DEFINE_GUID(IID_ITfSourceSingle,0x73131f9c,0x56a9,0x49dd,0xb0,0xee,0xd0,0x46,0x63,0x3f,0x75,0x28);
+DEFINE_GUID(IID_ITfThreadFocusSink,0xc0f1db0c,0x3a20,0x405c,0xa3,0x03,0x96,0xb6,0x01,0x0a,0x88,0x5f);
+
+DEFINE_GUID(CLSID_TF_ThreadMgr,0x529a9e6b,0x6587,0x4f23,0xab,0x9e,0x9c,0x7d,0x68,0x3e,0x3c,0x50);
+DEFINE_GUID(CLSID_TF_InputProcessorProfiles,0x33c53a50,0xf456,0x4884,0xb0,0x49,0x85,0xfd,0x64,0x3e,0xcf,0xed);
+DEFINE_GUID(CLSID_TF_CategoryMgr,0xA4B544A1,0x438D,0x4B41,0x93,0x25,0x86,0x95,0x23,0xE2,0xD6,0xC7);
+DEFINE_GUID(CLSID_TF_LangBarMgr,0xebb08c45,0x6c4a,0x4fdc,0xae,0x53,0x4e,0xb8,0xc4,0xc7,0xdb,0x8e);
+DEFINE_GUID(CLSID_TF_DisplayAttributeMgr,0x3ce74de4,0x53d3,0x4d74,0x8b,0x83,0x43,0x1b,0x38,0x28,0xba,0x53);
+
+DEFINE_GUID(GUID_TFCAT_TIP_KEYBOARD,0x34745c63,0xb2f0,0x4784,0x8b,0x67,0x5e,0x12,0xc8,0x70,0x1a,0x31);
+DEFINE_GUID(GUID_TFCAT_TIP_SPEECH,0xB5A73CD1,0x8355,0x426B,0xA1,0x61,0x25,0x98,0x08,0xF2,0x6B,0x14);
+DEFINE_GUID(GUID_TFCAT_TIP_HANDWRITING,0x246ecb87,0xc2f2,0x4abe,0x90,0x5b,0xc8,0xb3,0x8a,0xdd,0x2c,0x43);
+DEFINE_GUID(GUID_TFCAT_DISPLAYATTRIBUTEPROVIDER,0x046B8C80,0x1647,0x40F7,0x9B,0x21,0xB9,0x3B,0x81,0xAA,0xBC,0x1B);
+DEFINE_GUID(GUID_COMPARTMENT_KEYBOARD_DISABLED,0x71a5b253,0x1951,0x466b,0x9f,0xbc,0x9c,0x88,0x08,0xfa,0x84,0xf2);
+DEFINE_GUID(GUID_COMPARTMENT_KEYBOARD_OPENCLOSE,0x58273aad,0x01bb,0x4164,0x95,0xc6,0x75,0x5b,0xa0,0xb5,0x16,0x2d);
+DEFINE_GUID(GUID_COMPARTMENT_HANDWRITING_OPENCLOSE,0xf9ae2c6b,0x1866,0x4361,0xaf,0x72,0x7a,0xa3,0x09,0x48,0x89,0x0e);
+DEFINE_GUID(GUID_COMPARTMENT_SPEECH_DISABLED,0x56c5c607,0x0703,0x4e59,0x8e,0x52,0xcb,0xc8,0x4e,0x8b,0xbe,0x35);
+DEFINE_GUID(GUID_COMPARTMENT_SPEECH_OPENCLOSE,0x544d6a63,0xe2e8,0x4752,0xbb,0xd1,0x00,0x09,0x60,0xbc,0xa0,0x83);
+DEFINE_GUID(GUID_COMPARTMENT_SPEECH_GLOBALSTATE,0x2a54fe8e,0x0d08,0x460c,0xa7,0x5d,0x87,0x03,0x5f,0xf4,0x36,0xc5);
+DEFINE_GUID(GUID_COMPARTMENT_PERSISTMENUENABLED,0x575f3783,0x70c8,0x47c8,0xae,0x5d,0x91,0xa0,0x1a,0x1f,0x75,0x92);
+DEFINE_GUID(GUID_COMPARTMENT_EMPTYCONTEXT,0xd7487dbf,0x804e,0x41c5,0x89,0x4d,0xad,0x96,0xfd,0x4e,0xea,0x13);
+DEFINE_GUID(GUID_COMPARTMENT_TIPUISTATUS,0x148ca3ec,0x0366,0x401c,0x8d,0x75,0xed,0x97,0x8d,0x85,0xfb,0xc9);
+
