@@ -1,0 +1,7 @@
+/* textstor-uuid.c */
+/* Generate GUIDs for Text Services interfaces */
+
+#define INITGUID
+#include <basetyps.h>
+DEFINE_GUID(IID_ITextStoreACPSink,0x22d44c94,0xa419,0x4542,0xa2,0x72,0xae,0x26,0x09,0x3e,0xce,0xcf);
+DEFINE_GUID(IID_ITextStoreACP,0x28888fe3,0xc2a0,0x483a,0xa3,0xea,0x8c,0xb1,0xce,0x51,0xff,0x3d);
